--- a/www/upload/templates/upload/picture_form.html
+++ b/www/upload/templates/upload/picture_form.html
@@ -9,10 +9,10 @@
                 <label class="sr-only" for="id_file">File</label>
                 <input type="file" class="form-control" id="id_file" name="file">
             </div>
-
-            <button type="submit" class="btn btn-primary">upload</button>
-            <button type="reset" class="btn btn-warning">cancel</button>
-
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">upload</button>
+                <button type="reset" class="btn btn-warning">cancel</button>
+            </div>
         </form>
     </div>
 {% endblock %}
