--- a/www/upload/templates/upload/picture_confirm_delete.html
+++ b/www/upload/templates/upload/picture_confirm_delete.html
@@ -1,23 +1,20 @@
 {% extends "upload/base.html" %}
-{% load staticfiles %}
-{% block titles %}Picture List{% endblock %}
+{% load i18n %}
+{% block titles %}{% trans 'Picture List' %}{% endblock %}
 {% block content %}
 {% if this_pic %}
     <div class="row">
-
-        <h1>Are you sure?</h1>
-        <p>Are you sure you want to delete the selected picture?</p>
-        <h2>Summary</h2>
+        <h1>{% trans 'Are you sure?' %}</h1>
+        <p>{% trans 'Are you sure you want to delete this picture?' %}</p>
         <ul>
-            <li>Picture: {{ this_pic.slug }}</li>
-            <li>Picture: {{ this_pic.file }}</li>
+            <li>{{ this_pic.slug }}</li>
         </ul>
         <form action="" method="post">{% csrf_token %}
-            <input type="submit" class="btn btn-danger" value="Yes, I'm sure" />
-            <a href="#" onclick="window.history.back(); return false;" class="btn btn-link">No, take me back</a>
+            <input type="submit" class="btn btn-danger" value="{% trans 'Yes, I\'m sure' %} "  />
+            <a href="#" onclick="window.history.back(); return false;" class="btn btn-link">{% trans 'No, take me back' %}</a>
         </form>
     </div>
 {% else %}
-    <p>Not found.</p>
+    <p>{% trans 'Not found.' %}</p>
 {% endif %}
 {% endblock %}
