--- a/www/upload/templates/upload/picture_list.html
+++ b/www/upload/templates/upload/picture_list.html
@@ -3,17 +3,23 @@
 {% block titles %}{% trans 'Picture List' %}{% endblock %}
 {% block content %}
     <div class="row text-info text-right">
-        <p><a href="{% url 'upload:pic-add'%}">{% trans 'ADD PICTURE' %}</a></p>
+        <strong><a href="{% url 'upload:pic-add'%}">{% trans 'ADD PICTURE' %}</a></strong>
     </div>
 {% if all_pics %}
     <div class="row">
-    {% for pic in all_pics %}
-        <div class="pull-left text-center">
-            <img class="img-rounded img-inline" src="{% get_media_prefix %}{{ pic.file }}" title="{{ pic.slug }}" />
-            <br />
-            <a class="text-danger" href="{% url 'upload:pic-delete' pic.id %}">{% trans 'Delete' %}</a>
-        </div>
-    {% endfor %}
+        <ul class="list-inline">
+        {% for pic in all_pics %}
+        <li class="inline-group">
+            {% if user.is_authenticated %}
+            <a class="text-danger" href="{% url 'upload:pic-delete' pic.id %}"><i class="glyphicon glyphicon-remove"></i></a>
+            {% endif %}
+            <a href="{% get_media_prefix %}{{ pic.file }}" title="{% get_media_prefix %}{{ pic.file }}" class="thumbnail">
+                <img class="img-rounded img-inline" src="{% get_media_prefix %}{{ pic.file }}" title="{{ pic.slug }}" />
+            </a>
+        </li>
+
+        {% endfor %}
+            </ul>
     </div>
 {% else %}
     <p>{% trans '0 pictures.' %}</p>
