--- a/www/charade/templates/charade/ready.html
+++ b/www/charade/templates/charade/ready.html
@@ -9,8 +9,10 @@
        <h3><p id="warning" class="text-danger text-center"></p></h3>
     </div>
     <div class="row text-center">
-        <a href="{% url 'polls:index' %}" title="jump to polls">{% trans 'Polls' %}</a>
-        <strong><a href="{% url 'charade:game_board' %}" title="Login needed">{% trans 'Score-Board' %}</a></strong>
+        <a href="{% url 'upload:pic-list' %}" title="{% trans 'Jump to gallary' %}">{% trans 'Gallary' %}</a>
+        <a href="{% url 'polls:index' %}" title="{% trans 'Jump to polls' %}">{% trans 'Polls' %}</a>
+
+        <strong><a href="{% url 'charade:game_board' %}" title="{% trans 'Login needed' %}">{% trans 'Score-Board' %}</a></strong>
         <p></p>
         <div class="col-sm-offset-4 col-sm-4">
             <form class="form-inline" role="form" id="form-setting" action="{% url 'charade:game_set' %}" method="post">
