--- a/www/polls/templates/polls/base.html
+++ b/www/polls/templates/polls/base.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Header Start-->
     <a href="/">
-        <img class="header" src="{% static 'polls/images/avatar.jpg' %}" alt="Home" title="Home"></img>
+        <img class="header" src="{% static 'polls/images/avatar.jpg' %}" alt="Home" title="Home" />
     </a>
 
     <p>
