--- a/www/upload/templates/upload/base.html
+++ b/www/upload/templates/upload/base.html
@@ -33,14 +33,14 @@
     <div class="row">
         <div class="col-xs-3 col-sm-3">
             <a href="/">
-                <img class="img-rounded img-avatar" src="{% static 'upload/images/avatar.jpg' %}" alt="Home" title="Back Home? Click me."></img>
+                <img class="img-rounded img-avatar" src="{% static 'upload/images/avatar.jpg' %}" alt="Home" title="Back Home? Click me." />
             </a>
         </div>
         <div class="col-xs-6 col-sm-6">
         </div>
         <div class="col-xs-3 col-sm-3">
             {% if user.is_authenticated %}
-            <a href="{% url 'accounts:logout' %}" title="logout">{% trans 'Logout' %}</a>|
+            <a href="{% url 'accounts:logout' %}" title="Sign Out">{% trans 'Sign out' %}</a>|
             <strong>
                 {% trans 'Welcome' %}, {{ user.username }}
             </strong>
@@ -55,7 +55,7 @@
         </div>
         <div class="col-xs-6 col-sm-6">
             <h3 id="tips" class="text-center">
-                <strong id="tips1">{% trans 'Upload System' %}</strong>
+                <strong id="tips1">{% trans 'Gallary' %}</strong>
             </h3>
         </div>
         <div class="col-xs-3 col-sm-3">
