improved page layout.

--- a/www/accounts/templates/accounts/login.html
+++ b/www/accounts/templates/accounts/login.html
@@ -20,7 +20,7 @@
                     <div class="col-sm-offset-4 col-sm-8">
                         <input type="hidden" name="next" value="{{ next }}" />
                         <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Login' %}" />
-                        <a href="{% url 'accounts:registration' %}" class="btn btn-link btn-block">{% trans 'Create Account' %}</a>
+                        <a href="{% url 'accounts:registration' %}" class="btn btn-link btn-block">{% trans 'Sign Up' %}</a>
                     </div>
                 </div>
             </form>
