--- a/www/accounts/templates/accounts/registration.html
+++ b/www/accounts/templates/accounts/registration.html
@@ -19,6 +19,7 @@
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
                         <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Apply' %}" />
+                        <a href="{% url 'accounts:login' %}" class="btn btn-link btn-block">{% trans 'Login' %}</a>
                     </div>
                 </div>
             </form>
