--- a/www/charade/templates/charade/base.html
+++ b/www/charade/templates/charade/base.html
@@ -30,14 +30,12 @@
         <p></p>
     </div>
     <div class="row">
-        <div class="col-xs-3 col-sm-3">
+        <div class="col-xs-6 text-left">
             <a href="/">
                 <img class="img-rounded img-avatar" src="{% static 'charade/images/avatar.jpg' %}" alt="Home" title="Back Home? Click me." />
             </a>
         </div>
-        <div class="col-xs-6 col-sm-6">
-        </div>
-        <div class="col-xs-3 col-sm-3">
+        <div class="col-xs-6 text-right">
         {% if user.is_authenticated %}
             <a href="{% url 'accounts:logout' %}" title="Sign Out">{% trans 'Sign out' %}</a>
             |<strong>
@@ -50,29 +48,32 @@
 
     <!-- Header Start -->
     <div class="row">
-        <div class="col-xs-3 col-sm-3">
-        </div>
-        <div class="col-xs-6 col-sm-6">
+        <div class="col-xs-offset-1 col-xs-10">
             <h3 id="tips" class="text-center">
                 <small id="tips1">English Corner</small>
                 <a href="{% url 'charade:show_about' %}" title="About">'.'</a>
                 <strong id="tips2">Let's charade</strong>
             </h3>
         </div>
-        <div class="col-xs-3 col-sm-3">
+    </div>
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-10">
+            <blockquote id="quote">
+                <p>
+                    Hi, Chaos!
+                </p>
+                <p>
+                    Just do it, and do it regularly as a ritual.
+                </p>
+                <p>
+                    When we don't appreciate the good, when we take it for granted, the good depreciates.
+                </p>
+                <small class="pull-right">#just remind you#</small>
+            </blockquote>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-6 col-sm-6">
-            <pre id="quote">
-    Hi, Chaos!
-    Just do it, and do it regularly as a ritual.
-    When we don't appreciate the good, when we take
-    it for granted, the good depreciates.
-                               -- #just remind you#
-            </pre>
-        </div>
-        <div class="col-xs-6 col-sm-6">
+        <div class="col-xs-offset-1 col-xs-10">
             <pre id="help">
     [help]:
         1]. Input the number of words that the Game needs.
