--- a/www/charade/templates/charade/ready.html
+++ b/www/charade/templates/charade/ready.html
@@ -14,7 +14,7 @@
 
         <strong><a href="{% url 'charade:game_board' %}" title="{% trans 'Login needed' %}">{% trans 'Score-Board' %}</a></strong>
         <p></p>
-        <div class="col-sm-offset-4 col-sm-4">
+        <div class="col-xs-offset-1 col-xs-10">
             <form class="form-inline" role="form" id="form-setting" action="{% url 'charade:game_set' %}" method="post">
                 <div class="form-group">
                     {% csrf_token %}
@@ -27,8 +27,8 @@
     </div>
 
     <!-- Language Start -->
-    <div class="row text-right">
-        <div class="col-sm-offset-8 col-sm-4">
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-10 col-sm-11 text-right">
             <form class="form-inline" role="form" id="form-language" action="{% url 'set_language' %}" method="post">{% csrf_token %}
                 <div class="form-group">
                     <select class="form-control" id="select-language" name="language">
