--- a/www/upload/templates/upload/picture_list.html
+++ b/www/upload/templates/upload/picture_list.html
@@ -3,33 +3,29 @@
 {% block titles %}{% trans 'Picture List' %}{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-xs-3 col-sm-3">
+        <div class="col-xs-offset-6 col-xs-6 text-right text-info">
+            <p><strong>
+                <a href="{% url 'upload:pic-add'%}">{% trans 'ADD PICTURE' %}</a>
+            </strong></p>
         </div>
-        <div class="col-xs-6 col-sm-6">
-        </div>
-        <div class="col-xs-3 col-sm-3 text-info">
-            <strong><a href="{% url 'upload:pic-add'%}">{% trans 'ADD PICTURE' %}</a></strong>
-        </div>
-    <div>
+    </div>
 {% if all_pics %}
     <div class="row">
-        <div class="col-xs-1 col-sm-2">
-        </div>
-        <div class="col-xs-10 col-sm-8">
-        <ul class="list-inline">
+        <div class="col-xs-offset-1 col-xs-10">
+            <ul class="list-inline">
             {% for pic in all_pics %}
-            <li class="inline-group">
-            {% if user.is_authenticated %}
-            <a class="text-danger" href="{% url 'upload:pic-delete' pic.id %}"><i class="glyphicon glyphicon-remove"></i></a>
-            {% endif %}
-            <a href="{% get_media_prefix %}{{ pic.file }}" title="{% get_media_prefix %}{{ pic.file }}" class="thumbnail">
-                <img class="img-rounded img-inline" src="{% get_media_prefix %}{{ pic.file }}" title="{{ pic.slug }}" />
-            </a>
-            </li>
+                <li>
+                    {% if user.is_authenticated %}
+                    <a class="text-danger" href="{% url 'upload:pic-delete' pic.id %}">
+                        <i class="glyphicon glyphicon-remove"></i>
+                    </a>
+                    {% endif %}
+                    <a href="{% get_media_prefix %}{{ pic.file }}" title="{% get_media_prefix %}{{ pic.file }}" class="thumbnail">
+                        <img class="img-rounded img-inline" src="{% get_media_prefix %}{{ pic.file }}" title="{{ pic.slug }}" />
+                    </a>
+                </li>
             {% endfor %}
-        </ul>
-        </div>
-        <div class="col-xs-1 col-sm-2">
+            </ul>
         </div>
     </div>
 {% else %}
