--- a/www/charade/templates/charade/nav.html
+++ b/www/charade/templates/charade/nav.html
@@ -7,11 +7,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% static 'charade/images/avatar.jpg' %}">
-                <img class="img-rounded img-avatar" src="{% static 'charade/images/avatar.jpg' %}" alt="Home" title="Back Home? Click me." />
+            <a class="navbar-brand" href="/">
+                <img class="img-rounded img-avatar" src="{% static 'charade/images/avatar.jpg' %}" alt="Home" title="{% trans 'Back Home? Click me.' %}" />
             </a>
             <a class="navbar-brand" href="/">
-                PCSWO
+                Nosmo King
             </a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-need-collapsed">
