--- a/www/upload/templates/upload/picture_confirm_delete.html
+++ b/www/upload/templates/upload/picture_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "upload/base.html" %}
 {% load i18n %}
-{% block titles %}{% trans 'Picture List' %}{% endblock %}
+{% block titles %}{% trans 'Operation Confirm' %}{% endblock %}
 {% block content %}
 {% if this_pic %}
     <div class="row">
