--- a/www/upload/templates/upload/picture_list.html
+++ b/www/upload/templates/upload/picture_list.html
@@ -1,6 +1,6 @@
 {% extends "upload/base.html" %}
 {% load i18n static %}
-{% block titles %}{% trans 'Picture List' %}{% endblock %}
+{% block titles %}{% trans 'Gallary' %}{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-xs-offset-6 col-xs-6 text-right text-info">
