--- a/www/charade/templates/charade/board.html
+++ b/www/charade/templates/charade/board.html
@@ -42,8 +42,8 @@
     </table>
 </div>
 {% else %}
-<div class="row">
-    <h1><p class="text-danger text-center">{% trans 'Not available' %}.</p></h1>
+<div class="row text-info text-center">
+    <p><strong>{% trans 'Not available.' %}<strong></p>
 </div>
 {% endif %}
 {% endblock %}
