--- a/www/upload/templates/upload/picture_form.html
+++ b/www/upload/templates/upload/picture_form.html
@@ -1,6 +1,6 @@
 {% extends "upload/base.html" %}
 {% load i18n staticfiles %}
-{% block titles %}Upload{% endblock %}
+{% block titles %}{% trans 'Image Upload' %}{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-xs-offset-6 col-xs-6 text-info text-right">
