improved page layout and i18n

--- a/www/accounts/templates/accounts/profile.html
+++ b/www/accounts/templates/accounts/profile.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <label class="col-sm-6 text-right">{% trans "avator:" %}</label>
                 <div class="col-sm-6">
-                    <img src="{% get_media_prefix %}{{ user.player.avator }}"></a>
+                    <img src="{% get_media_prefix %}{{ user.player.avator }}">
                 </div>
             </div>
 
