--- a/www/charade/templates/charade/about.html
+++ b/www/charade/templates/charade/about.html
@@ -1,7 +1,8 @@
 {% extends 'charade/base.html' %}
+{% load i18n %}
 {% block titles %}About{% endblock %}
 {% block content %}
     <div class="row text-center">
-        TAKE MY HAT OFF to #Fu Tian English Corner# from 2010-2016.
+        {% trans 'TAKE MY HAT OFF to #Fu Tian English Corner# from 2010-2016.' %}
     </div>
 {% endblock %}
