--- a/www/charade/templates/charade/nav.html
+++ b/www/charade/templates/charade/nav.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-need-collapsed">
@@ -22,13 +22,13 @@
                        <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                       <li>
+                        <li>
                             <a href="{% url 'upload:pic-list' %}" title="{% trans 'Jump to gallary' %}">{% trans 'Gallary' %}</a>
-                       </li>
-                       <li class="divider"></li>
-                       <li>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
                             <a href="{% url 'polls:index' %}" title="{% trans 'Jump to polls' %}">{% trans 'Polls' %}</a>
-                       </li>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -38,20 +38,41 @@
 
             <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-                <li>
-                    <a href="{% url 'accounts:profile' %}" title="{% trans 'View Profile' %}" class="navbar-link">
-                        {{ user.username }}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <img class="img-rounded img-avatar" src="{% get_media_prefix %}{{ user.player.avator }}" title="{% trans 'View profile' %}">
+                       <b class="caret"></b>
                     </a>
-                </li>
-                <li>
-                    <a href="{% url 'accounts:logout' %}" title="{% trans 'Sign Out' %}" class="navbar-link">
-                        {% trans 'Sign Out' %}
-                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#">
+                            <p>{% trans 'Signed in as' %}</p>
+                            {{ user.username }}
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="{% url 'accounts:profile' %}" class="navbar-link">
+                            {% trans 'Your profile' %}
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'charade:show_about' %}" class="navbar-link">
+                            {% trans 'Help' %}
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="{% url 'accounts:logout' %}" class="navbar-link">
+                            {% trans 'Sign out' %}
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             {% else %}
                 <li>
-                    <a href="{% url 'accounts:login'%}" title="{% trans 'Sign In' %}" class="navbar-link">
-                        {% trans 'Sign In' %}
+                    <a href="{% url 'accounts:login'%}" class="navbar-link">
+                        {% trans 'Sign in' %}
                     </a>
                 </li>
             {% endif %}
