--- a/www/upload/templates/upload/picture_list.html
+++ b/www/upload/templates/upload/picture_list.html
@@ -13,7 +13,7 @@
     </div>
 {% if all_pics %}
     <div class="row">
-        <div class="col-xs-offset-1 col-xs-10">
+        <div class="col-xs-offset-1 col-xs-10 text-center">
             <ul class="list-inline">
             {% for pic in all_pics %}
                 <li>
@@ -23,7 +23,7 @@
                     </a>
                     {% endif %}
                     <a href="{% get_media_prefix %}{{ pic.file }}" title="{% get_media_prefix %}{{ pic.file }}" class="thumbnail">
-                        <img class="img-rounded img-inline" src="{% get_media_prefix %}{{ pic.file }}" title="{{ pic.slug }}" />
+                        <img src="{% get_media_prefix %}{{ pic.file }}" title="{{ pic.slug }}" />
                     </a>
                 </li>
             {% endfor %}
